# fastenv

./: CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
src/: core.rs  main.rs
tests/: acceptance.rs  acceptance_helpers.rs
