[package]
name = "fastenv"
version = "0.1.0"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
edition = "2021"
description = "FastEnv: Unintrusive, on-demand environment manager creating lightweight shims for projects, without shell hooks or auto-loading scripts."
license = "MIT"
readme = "README.md"
repository = "https://github.com/trinhminhtriet/fastenv"
homepage = "https://trinhminhtriet.com"
documentation = "https://github.com/trinhminhtriet/fastenv"
keywords = ["environment", "manager", "shims", "rust", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
blake3 = "1.5.5"
# Disable clap's suggestions feature, because it sometimes suggests nonsense:
# https://github.com/clap-rs/clap/discussions/3962
clap = { version = "4", features = ["derive", "std", "color"], default-features = false }
console = { version = "0.15.0", default-features = false }
ctrlc = "3.2.2"
dialoguer = { version = "0.11.0", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
exec = "0.3.1"
hex = "0.4.3"
log = "0.4.17"
tempfile = "3.3.0"

# using fork because we're requiring this bugfix:
# https://github.com/ogham/rust-term-grid/pull/14
uutils_term_grid = "0.6.0"
thiserror = "1.0.68"
which = "7"

[dev-dependencies]
insta = { version = "1.41.0", features = ["filters"], default-features = false }
insta-cmd = "0.6.0"
maplit = "1.0.2"
regex = { version = "1.6.0", default-features = false }

[profile.release]
lto = true
